--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -1,4 +1,9 @@
+  <div class="booyah-box">
+
+
 <% @patients.each do |patient| %>
+  <div class="booyah-box col-10 offset-1">
+
   <div>
     <h1><%= patient.name %></h1>
     <h2><%= patient.age %></h2>
