changed format and wallpaper

--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -6,11 +6,11 @@
 
   <div>
     <h1><%= patient.name %></h1>
-    <h2><%= patient.age %></h2>
-    <h3><%= patient.gender %></h3>
-	<i><%= patient.address %></i>
-    <p><%= patient.phone_number %></p>
-    <h4><%= patient.email %></h4>
+    <i>Age:  <%= patient.age %><i><br />
+    <i>Gender:  <%= patient.gender %><i><br />
+	<i>Home Address:  <%= patient.address %></i><br />
+    <i>Phone Number:  <%= patient.phone_number %><i><br />
+    <i>Email:  <%= patient.email %><i>
 
   </div>
 
